small fixes to spacing of PNGs, along with some other minor tweaks

--- a/meteor/client/stylesheets/partials/_chart-edit.scss
+++ b/meteor/client/stylesheets/partials/_chart-edit.scss
@@ -353,6 +353,10 @@ select {
   }
 }
 
+.svg-output > svg {
+  display: block;
+}
+
 .selectize-input {
   font-size: 0.8em;
   font-family: "Monaco", "Lucida Console", monospace;
